--- a/app/globals.css
+++ b/app/globals.css
@@ -1,23 +1,79 @@
-
-/* 
-  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Oswald:wght@200..700&display=swap'); */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 224 71.4% 4.1%;
+    --card: 0 0% 100%;
+    --card-foreground: 224 71.4% 4.1%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 224 71.4% 4.1%;
+    --primary: 220.9 39.3% 11%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 220 14.3% 95.9%;
+    --secondary-foreground: 220.9 39.3% 11%;
+    --muted: 220 14.3% 95.9%;
+    --muted-foreground: 220 8.9% 46.1%;
+    --accent: 220 14.3% 95.9%;
+    --accent-foreground: 220.9 39.3% 11%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 220 13% 91%;
+    --input: 220 13% 91%;
+    --ring: 224 71.4% 4.1%;
+    --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
 
-/* .card1 {
-  transform: rotate(45deg);
-} */
+  .dark {
+    --background: 224 71.4% 4.1%;
+    --foreground: 210 20% 98%;
+    --card: 224 71.4% 4.1%;
+    --card-foreground: 210 20% 98%;
+    --popover: 224 71.4% 4.1%;
+    --popover-foreground: 210 20% 98%;
+    --primary: 210 20% 98%;
+    --primary-foreground: 220.9 39.3% 11%;
+    --secondary: 215 27.9% 16.9%;
+    --secondary-foreground: 210 20% 98%;
+    --muted: 215 27.9% 16.9%;
+    --muted-foreground: 217.9 10.6% 64.9%;
+    --accent: 215 27.9% 16.9%;
+    --accent-foreground: 210 20% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 215 27.9% 16.9%;
+    --input: 215 27.9% 16.9%;
+    --ring: 216 12.2% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+}
 
-*{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+* {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif !important;
 }
 
 .active {
-  background: #F2E8F2;
+  background: #f2e8f2;
 }
 
 .cardContainer {
@@ -28,28 +84,25 @@
 }
 
 .button:hover {
-  background: #F2E8F2;
+  background: #f2e8f2;
 }
 
 * {
   /* overflow-x: hidden; */
-
 }
 
 .landingPage {
   /* background: #000; */
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   width: 100vw;
   height: 100%;
   overflow-x: hidden !important;
   color: white !important;
 }
 
-
 .heroSectionH1 {
   font-family: "Bebas Neue", sans-serif !important;
   font-weight: 700 !important;
-
 }
 
 .brefContainer {
@@ -73,10 +126,7 @@
   border-radius: 10px;
 }
 
-
-
 @media only screen and (min-width: 600px) {
-
   .container {
     width: 100vw !important;
     padding: 10px;
@@ -125,9 +175,7 @@
 }
 
 .container-wrapper {
-  box-shadow: inset 0 0px 10px 0px #FFFFFF;
-
-
+  box-shadow: inset 0 0px 10px 0px #ffffff;
 }
 
 .navbar {
@@ -138,8 +186,6 @@
   z-index: 999999999999;
   /* background-color: #000; */
 }
-
-
 
 .showVideo:hover .hiddenVideo {
   display: block;
@@ -196,7 +242,7 @@
 }
 
 .hoverButton {
-  box-shadow: inset 0 0px 10px 0px #FFFFFF;
+  box-shadow: inset 0 0px 10px 0px #ffffff;
   padding: 10px 20px;
   font-size: 18px;
   transition: 0.4s;
@@ -204,7 +250,7 @@
 }
 
 .hoverButton:hover {
-  box-shadow: inset 0 0px 20px 0px #FFFFFF;
+  box-shadow: inset 0 0px 20px 0px #ffffff;
 }
 
 .landingPage {
@@ -236,20 +282,17 @@
   }
 }
 
-
 .slide-0 {
   animation: slideInFromBottom 0.4s ease-out forwards;
 }
 
 .slide-1 {
-
   animation: slideInFromTop 0.4s ease-out forwards;
   animation-delay: 0.1s;
 }
 
-
 .bglinks {
-  background-color: rgba(255, 255, 255, 0.3) !important
+  background-color: rgba(255, 255, 255, 0.3) !important;
 }
 
 .bglinks .links {
@@ -287,17 +330,15 @@
   border-radius: 50%;
 }
 
-
-
 .imageContainer {
   background: #030014;
-  color: white !important;;
+  color: white !important;
   background-size: cover;
 }
 
 .stickyContainer {
-  -ms-overflow-style: none;  /* Hide scrollbar in IE and Edge */
-  scrollbar-width: none;  /* Hide scrollbar in Firefox */
+  -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
   overflow-y: scroll; /* Ensure scrolling is still functional */
 }
 
@@ -309,66 +350,62 @@
   cursor: pointer;
 }
 
-body{
+body {
   font-family: sans-serif;
 }
 
-.label-float{
+.label-float {
   position: relative;
   padding-top: 13px;
 }
 
-.label-float input{
+.label-float input {
   border: 1px solid lightgrey;
   border-radius: 5px;
   outline: none;
   min-width: 250px;
   padding: 15px 20px;
   font-size: 16px;
-  transition: all .1s linear;
-  -webkit-transition: all .1s linear;
-  -moz-transition: all .1s linear;
-  -webkit-appearance:none;
+  transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
 }
 
-.label-float input:focus{
+.label-float input:focus {
   border: 2px solid #3951b2;
 }
 
-.label-float input::placeholder{
-  color:transparent;
+.label-float input::placeholder {
+  color: transparent;
 }
 
-.label-float label{
+.label-float label {
   pointer-events: none;
   position: absolute;
   top: calc(50% - 8px);
   left: 15px;
-  transition: all .1s linear;
-  -webkit-transition: all .1s linear;
-  -moz-transition: all .1s linear;
+  transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
   background-color: white;
   padding: 5px;
   box-sizing: border-box;
 }
 
-.label-float input:required:invalid + label{
+.label-float input:required:invalid + label {
   color: #030014;
 }
 
-
-.label-float input:focus:required:invalid{
+.label-float input:focus:required:invalid {
   border: 2px solid #030014;
 }
 
-
-.label-float input:required:invalid + label:before{
-  content: '*';
+.label-float input:required:invalid + label:before {
+  content: "*";
 }
 
-
 .label-float input:focus + label,
-.label-float input:not(:placeholder-shown) + label{
+.label-float input:not(:placeholder-shown) + label {
   font-size: 13px;
   top: 0;
   color: #3951b2;
@@ -388,11 +425,22 @@ body{
 }
 
 .glow-on-hover:before {
-  content: '';
-  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
   position: absolute;
   top: -2px;
-  left:-2px;
+  left: -2px;
   background-size: 400%;
   z-index: -1;
   filter: blur(5px);
@@ -400,12 +448,12 @@ body{
   height: calc(100% + 4px);
   animation: glowing 20s linear infinite;
   opacity: 0;
-  transition: opacity .3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
   border-radius: 10px;
 }
 
 .glow-on-hover:active {
-  color: #000
+  color: #000;
 }
 
 .glow-on-hover:active:after {
@@ -418,7 +466,7 @@ body{
 
 .glow-on-hover:after {
   z-index: -1;
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
@@ -429,9 +477,15 @@ body{
 }
 
 @keyframes glowing {
-  0% { background-position: 0 0; }
-  50% { background-position: 400% 0; }
-  100% { background-position: 0 0; }
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
 
 .landingPage {
@@ -445,7 +499,11 @@ body{
 }
 
 .hero:before {
-  background: radial-gradient(37.74% 81.78% at 50% 26.56%, rgba(148, 101, 255, .08) 0%, rgba(3, 0, 20, 0) 100%);
+  background: radial-gradient(
+    37.74% 81.78% at 50% 26.56%,
+    rgba(148, 101, 255, 0.08) 0%,
+    rgba(3, 0, 20, 0) 100%
+  );
   content: "";
   display: block;
   height: 900px;
@@ -491,7 +549,8 @@ svg {
   display: block;
 }
 
-.hero-badge, .hero-description {
+.hero-badge,
+.hero-description {
   font-feature-settings: "ss01" on, "cv10" on, "calt" off, "liga" off;
 }
 
@@ -509,11 +568,16 @@ svg {
   position: relative;
   width: -moz-max-content;
   width: max-content;
-  transition: .45s cubic-bezier(.6,.6,0,1) box-shadow;
+  transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow;
 }
 
 .hero-badge-text {
-  background: linear-gradient(0deg, rgba(255, 255, 255, .4), rgba(255, 255, 255, .4)), linear-gradient(90.01deg, #e59cff .01%, #ba9cff 50.01%, #9cb2ff 100%);
+  background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.4),
+      rgba(255, 255, 255, 0.4)
+    ),
+    linear-gradient(90.01deg, #e59cff 0.01%, #ba9cff 50.01%, #9cb2ff 100%);
   background-blend-mode: normal, screen;
   -webkit-background-clip: text;
   background-clip: text;
@@ -533,12 +597,19 @@ svg {
   line-height: 28px;
 }
 
-
 .hero-black-hole {
   height: 810px;
   left: 50%;
-  -webkit-mask-image: radial-gradient(50% 50% at 50% 50%, #fff 60.94%, transparent 100%);
-  mask-image: radial-gradient(50% 50% at 50% 50%, #fff 60.94%, transparent 100%);
+  -webkit-mask-image: radial-gradient(
+    50% 50% at 50% 50%,
+    #fff 60.94%,
+    transparent 100%
+  );
+  mask-image: radial-gradient(
+    50% 50% at 50% 50%,
+    #fff 60.94%,
+    transparent 100%
+  );
   -webkit-mask-size: cover;
   mask-size: cover;
   position: absolute;
@@ -562,8 +633,20 @@ svg {
 .hero-black-hole-stars {
   height: 700px;
   left: 50%;
-  -webkit-mask-image: radial-gradient(50% 50% at 50% 50%, rgba(217, 217, 217, 0) 27.08%, #d9d9d9 47.92%, rgba(217, 217, 217, .8) 75%, rgba(217, 217, 217, 0) 100%);
-  mask-image: radial-gradient(50% 50% at 50% 50%, rgba(217, 217, 217, 0) 27.08%, #d9d9d9 47.92%, rgba(217, 217, 217, .8) 75%, rgba(217, 217, 217, 0) 100%);
+  -webkit-mask-image: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(217, 217, 217, 0) 27.08%,
+    #d9d9d9 47.92%,
+    rgba(217, 217, 217, 0.8) 75%,
+    rgba(217, 217, 217, 0) 100%
+  );
+  mask-image: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(217, 217, 217, 0) 27.08%,
+    #d9d9d9 47.92%,
+    rgba(217, 217, 217, 0.8) 75%,
+    rgba(217, 217, 217, 0) 100%
+  );
   -webkit-mask-position: 0 0;
   mask-position: 0 0;
   -webkit-mask-size: cover;
@@ -589,8 +672,6 @@ svg {
   width: 2px;
 }
 
-
-
 @keyframes heroBlackHoleStarsRotate {
   0% {
     transform: translateZ(0) translate(-50%, -50%) rotate(0);
@@ -605,32 +686,31 @@ svg {
     background: rgba(255, 255, 255, 0);
     transform: translateZ(0) translate(0) scale(1);
   }
-  
+
   10% {
     background: rgb(255, 255, 255);
   }
   100% {
     background: rgb(255, 255, 255);
-    transform: translateZ(0) var(--transform) scale(.5);
+    transform: translateZ(0) var(--transform) scale(0.5);
   }
-  
 }
 
 @keyframes marquee {
   0% {
-      transform: translateX(0);
+    transform: translateX(0);
   }
   100% {
-      transform: translateX(-100%);
+    transform: translateX(-100%);
   }
 }
 
 @keyframes marquee-vertical {
   0% {
-      transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
-      transform: translateY(-100%);
+    transform: translateY(-100%);
   }
 }
 
@@ -651,5 +731,3 @@ svg {
 }
 
 /* .group-hover:[animat. */
-
-
